<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".add_tag">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Photos.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Photos.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <Spinner
        android:id="@+id/tag_spinner"
        android:layout_width="match_parent"
        android:layout_height="52dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/name_label"
        />
    <EditText
        android:id="@+id/tag_name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:drawable/editbox_background" />

    <!--  Year label -->
    <!--  Buttons for save and cancel -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/movie_save"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="61dp"
            android:layout_marginEnd="15dp"
            android:onClick="save"

            android:text="@string/save_label"
            android:textSize="16sp"
            app:backgroundTint="@null" />

        <Button
            android:id="@+id/movie_cancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="59dp"
            android:onClick="cancel"
            android:text="@string/cancel_label"
            android:textSize="16sp"
            app:backgroundTint="@null" />

    </LinearLayout>


</LinearLayout>